# PolynomialAlgorithms

./: LICENSE  README  README.md  buchberger.cabal  future_options.txt  polynomial-algorithms.cabal
app/: Main.hs
buchberger/: buchberger.cabal
buchberger/app/: Main.hs
buchberger/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
buchberger/dist-newstyle/packagedb/ghc-8.10.7/: buchberger-0.1.0.0-inplace.conf  package.cache
buchberger/src/: .DenseMonom.hs.old  .DenseMonom.hs.oldish  Base.hs  BaseRing.hs  Coefficient.hs  DenseMonom.hs  Modular.hs  PolyParsers.hs  PolyRing.hs  Polynomial.hs  RingParams.hs
src/: Algorithms.hs  Coefficient.hs  DenseMonom.hs  PolyParsers.hs  Polynomial.hs  RingParams.hs  SparseMonom.hs
thesis/: .gitignore  TommyMeek_Thesis.tex  references.bib  thesis.tex  wfuthesis.cls
