cabal-version:      2.4
name:               polynomial-algorithms
version:            0.1.0.0
license:            MIT
author:             Frank Moore and Tommy Meek
--synopsis:
--description:

library
    exposed-modules:      Algorithms
                        , Coefficient
                        , DenseMonom
                        , Polynomial
                        , PolyParsers
                        , RingParams
                        , SparseMonom
    build-depends:        base ^>=4.16.3.0
                        , composition
                        , containers
                        , fixed-vector
                        , ilist
                        , reflection
                        , proxy
                        , split
                        , text
    default-extensions:   DataKinds
                        , GADTs
                        , FlexibleContexts
                        , FlexibleInstances
                        , KindSignatures
                        , ScopedTypeVariables
                        , StandaloneDeriving
                        , UndecidableInstances
    hs-source-dirs:       src
    default-language:     Haskell2010

executable buchberger
    main-is:              Main.hs
    build-depends:        base ^>=4.16.3.0
                        , containers
                        , polynomial-algorithms
                        , sscript
    default-extensions:   DataKinds
    hs-source-dirs:       app
    default-language:     Haskell2010
