cabal-version:      2.4
name:               buchberger
version:            0.1.0.0
license:            MIT
author:             Frank Moore and Tommy Meek
--synopsis:
--description:

library
    exposed-modules:      DenseMonom, RingParams
    build-depends:        base ^>=4.16.3.0
                        , composition
                        , containers
                        , reflection
                        , proxy
                        , split
                        , text
    default-extensions:   DataKinds
                        , GADTs
                        , FlexibleInstances
                        , KindSignatures
                        , ScopedTypeVariables
    hs-source-dirs:       src
    default-language:     Haskell2010

executable buchberger
    main-is:              Main.hs
    build-depends:        base ^>=4.16.3.0
                        , buchberger
                        , sscript
    default-extensions:   DataKinds
    hs-source-dirs:       app
    default-language:     Haskell2010
